--- a/conf/conf-available/dav.conf
+++ b/conf/conf-available/dav.conf
@@ -10,6 +10,7 @@ Alias / "/var/lib/dav/data/"
   <RequireAny>
     Require valid-user
   </RequireAny>
+  IndexOptions Charset=utf-8
 </Directory>
 
 # These disable redirects on non-GET requests for directories that
