--- a/conf/conf-available/dav.conf
+++ b/conf/conf-available/dav.conf
@@ -4,6 +4,7 @@ Alias / "/var/lib/dav/data/"
   Dav On
   Options Indexes FollowSymLinks
   DirectoryIndex disabled
+  AllowOverride All
 
   AuthType Basic
   AuthName "WebDAV"
