--- a/conf/conf-available/dav.conf
+++ b/conf/conf-available/dav.conf
@@ -1,17 +1,42 @@
 DavLockDB "/var/lib/dav/DavLock"
 Alias / "/var/lib/dav/data/"
 <Directory "/var/lib/dav/data/">
+
+  ### General configuration
+  # Enable WebDAV
   Dav On
-  Options Indexes FollowSymLinks
+  # Ensure mod_autoindex is used
+  Options +Indexes
+  # Use UTF-8 every time
+	IndexOptions Charset=UTF-8
+  # Ensure mod_dir does not take precedence over mod_autoindex
   DirectoryIndex disabled
 
+	### Table configuration
+	# Display table headers
+	IndexOptions FancyIndexing
+	# Use the html <table>
+	IndexOptions HTMLTable
+	# Remove the description column
+	IndexOptions SuppressDescription
+	# Remove the <hr>
+	IndexOptions SuppressRules
+	# Do not cut the names
+	IndexOptions NameWidth=*
+
+	### Sorting options
+	IndexOrderDefault Ascending Name
+	IndexOptions IgnoreCase
+	IndexOptions FoldersFirst
+	IndexOptions VersionSort
+
+  ## Auth
   AuthType Basic
   AuthName "WebDAV"
   AuthUserFile "/user.passwd"
   <RequireAny>
     Require valid-user
   </RequireAny>
-  IndexOptions Charset=utf-8
 </Directory>
 
 # These disable redirects on non-GET requests for directories that
